Add debug logging for ProductGallery layout settings

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <title>DainoStore</title>
+    <link rel="icon" type="image/svg+xml" href="/logo_red.svg">
 
     <!-- Critical: Show loading skeleton immediately -->
     <style>
