--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <script>(function(w,d,s,l){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://hr26hzmrzu.dainostore.com/daino.js';f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer');</script>
+
     <title>DainoStore</title>
     <link rel="icon" type="image/svg+xml" href="/logo_red.svg">
 
@@ -33,8 +35,12 @@
     </style>
   </head>
   <body>
+
+    <noscript><iframe src="https://hr26hzmrzu.dainostore.com/daino.html?id=GTM-5WQTVB7J" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <!-- Show loading spinner immediately -->
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
     <script>
       // Remove loading spinner when React loads
