add page_view datalayer to homepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      window.dataLayer.push({
+        'event': 'page_view',
+        'page': {
+          'page_title': 'Dainostore',
+          'page_location': 'https://www.dainostore.com',
+          'page_path': '/',
+        }
+      });
+    </script>
+
     <script>(function(w,d,s,l){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://hr26hzmrzu.dainostore.com/daino.js';f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer');</script>
 
     <title>DainoStore</title>
